workshop03/fortune.yaml
---

kind: Deployment
apiVersion: apps/v1

metadata:
  name: fortune-deploy
  namespace: myns
  labels:
    app: fortune
    version: v1
  
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: fortune-pod
      version: v1
  template:
    metadata:
      name: fortune-pod
      labels:
        app: fortune-pod
        version: v1
    spec: 
      containers:
      - name: fortune
        image: stackupiss/fortune:v1
        imagePullPolicy: Always
        ports:
          - name: http-port
            containerPort: 3000
